# Bean_Machine

./: .env.example  .gitignore  ARCHITECTURE.md  NEXT_PHASE_TODO.md  PHYSICS_ASSUMPTIONS.md  PRODUCT_VISION.md  README.md  README_DEV.md  V1_SCOPE.md  index.html  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.server.json
docs/: authoring_commands.md  trajectory_schema_v1.md  video_export.md  viewport_interaction.md
examples/scenarios/: thrust_impulse_demo.json  toy_two_body_orbit.json  two_body_orbit.json
scripts/: check-required-deps.cjs
server/: index.ts
src/: App.tsx  main.tsx
src/components/: AuthOverlay.tsx  Avatar.tsx  AvatarUploader.tsx  CloseButton.tsx  FeatureCard.tsx  ImageAssetBrowser.tsx  ModalTransition.tsx  NewItemDialog.tsx  NewProjectDialog.tsx  ProfileMenu.tsx  ProjectActionMenuSettings.tsx  ProjectOverviewPanel.tsx  ProjectSettingsDialog.tsx  ProtectedRoute.tsx  SegmentedControl.tsx  ThemeSwitcher.tsx  icons.tsx
src/constants/: itemOptions.ts  themes.ts
src/context/: AuthContext.tsx  ProjectContext.tsx  ThemeContext.tsx
src/hooks/: useProfileSettings.ts
src/lib/: api.ts  profile.ts  usePrefersReducedMotion.ts
src/pages/: HelpPage.tsx  Home.tsx  ProfilePage.tsx  ProjectPage.tsx  SignInPage.tsx  SignUpPage.tsx  UpgradePage.tsx  VerifyPage.tsx
src/physics_studio.egg-info/: PKG-INFO  (+4 more)
tests/: test_authoring_commands.py  test_camera_render.py  test_determinism.py  test_no_bom.py  test_playback_speed.py  test_playback_state.py  test_sampling.py  test_viewport_interaction.py
(+37 files in other folders)
