[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "physics-studio"
version = "0.1.0"
description = "Physics Simulation Studio - deterministic simulation and authoring toolkit"
readme = "PRODUCT_VISION.md"
requires-python = ">=3.12"
license = {text = "Proprietary"}
authors = [{name = "Physics Studio Team"}]
dependencies = [
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff",
]
ui = [
  "PySide6>=6.6",
]

[project.scripts]
physics-studio-sim = "physics_studio.cli.simulate:main"
physics-studio-app = "physics_studio.app.main:main"
physics-studio-render = "physics_studio.cli.render:main"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
